# SSPSG-Discord-Bot

./: Cargo.toml  LICENSE  README.md
.github/workflows/: linter.yml
src/: main.rs
src/commands/: command.rs
